--- a/opencood/hypes_yaml/point_pillar_intermediate_V2VAM.yaml
+++ b/opencood/hypes_yaml/point_pillar_intermediate_V2VAM.yaml
@@ -13,7 +13,7 @@ yaml_parser: "load_point_pillar_params" # Name of the parser
 #################################### Training Parameters  ####################################
 train_params:
   batch_size: &batch_size 4 # Batch size 2 and 4 for val and testing. Written in Point-Pillar paper
-  epoches: 1  # 160 and 320. Written in Point-Pillar paper
+  epoches: 60  # 160 and 320. Written in Point-Pillar paper
   eval_freq: 1
   save_freq: 1
   max_cav: &max_cav 5 # Written  in V2VAM paper
@@ -100,16 +100,21 @@ model:
       padding: [1]
       dim: [256]
       input_dim: 384 # 128 * 3
+
+#################################### Optimizer Parameters  ####################################
 optimizer:
   core_method: Adam
-  lr: 1e-3
+  lr: 1e-3 # it is 1e-7
   args:
     eps: 1e-10 # epsilon used for normalization to prevent zero result
+    weight_decay: 1e-4
+#################################### Loss Parameters  ####################################
 loss:
   core_method: point_pillar_loss
   args:
     cls_weight: 1.0
     reg: 2.0
+#################################### Learning Rate Scheduler Parameters  ####################################
 lr_scheduler:
   core_method: multistep #step, multistep and Exponential support
   gamma: 0.1
